force-app/main/default/objects/Property__c/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person performing the inspections on the property</description>
    <label>Inspector</label>
    <referenceTo>Inspector__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>