force-app/main/default/objects/Property__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <description>Relationship to the Financial Institution that is the lender for the property being inspected</description>
    <inlineHelpText>Relationship to the Financial Institution that is the lender for the property being inspected</inlineHelpText>
    <label>Lender</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>