force-app/main/default/objects/Property__c/listViews/Properties_Without_Borrowers.listView-meta.xml
<ListView>
    <fullName>Properties_Without_Borrowers</fullName>
    <columns>NAME</columns>
    <columns>Lender__c</columns>
    <columns>Borrower__c</columns>
    <columns>Inspector__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Borrower__c</field>
        <operation>equals</operation>
    </filters>
    <label>Properties Without Borrowers</label>
</ListView>