force-app/main/default/objects/Property__c/listViews/Properties_without_Inspectors.listView-meta.xml
<ListView>
    <fullName>Properties_without_Inspectors</fullName>
    <columns>NAME</columns>
    <columns>Lender__c</columns>
    <columns>Inspector__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Inspector__c</field>
        <operation>equals</operation>
    </filters>
    <label>Properties without Inspectors</label>
</ListView>